@@ -3,7 +3,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:id="@+id/menu_add_list"
-        android:orderInCategory="3"
+        android:orderInCategory="8"
         android:title="@string/menu_create_list"
         android:showAsAction="never" />
 
